# chip-8-python

./: .gitignore  README.md  cpu.py  display.py  main.py  main_eel.py  memory.py  pyproject.toml  register.py  stack.py  test.py  tests.py  types.py  utils.py  virtualkeyboard.py
emulator/: cpu.py  display.py  stack.py
web/: index.html  script.js
