[tool.poetry]
name = "python-chip-8"
version = "0.1.0"
description = ""
authors = ["Frans de Boer <frans-de-boer@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
opencv-python = "^4.5.4"
Eel = "^0.14.0"
keyboard = "^0.13.5"
pynput = "^1.7.4"
snakeviz = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
